fix: fix flickering in title

--- a/styles.css
+++ b/styles.css
@@ -52,31 +52,17 @@ h1 {
    letter-spacing: -7px;
    font-weight: 700;
    text-transform: uppercase;
-   animation: blur .75s ease-out infinite;
+   animation: neon .1s ease-in-out infinite alternate;
    text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff;
 }
 
-@keyframes blur {
-   from {
-      text-shadow: 0px 0px 10px #fff,
-         0px 0px 10px #fff,
-         0px 0px 25px #fff,
-         0px 0px 25px #fff,
-         0px 0px 25px #fff,
-         0px 0px 25px #fff,
-         0px 0px 25px #fff,
-         0px 0px 25px #fff,
-         0px 0px 50px #fff,
-         0px 0px 50px #fff,
-         0px 0px 50px #7B96B8,
-         0px 0px 150px #7B96B8,
-         0px 10px 100px #7B96B8,
-         0px 10px 100px #7B96B8,
-         0px 10px 100px #7B96B8,
-         0px 10px 100px #7B96B8,
-         0px -10px 100px #7B96B8,
-         0px -10px 100px #7B96B8;
-   }
+@keyframes neon {
+	from {
+		text-shadow: 0 0 6px rgba(202, 228, 225, 0.92), 0 0 30px rgba(202, 228, 225, 0.34), 0 0 12px rgba(191, 226, 255, 0.52), 0 0 21px rgba(191, 226, 255, 0.92), 0 0 34px rgba(191, 226, 255, 0.78), 0 0 54px rgba(191, 226, 255, 0.92);
+	}
+	to {
+		text-shadow: 0 0 6px rgba(202, 228, 225, 0.98), 0 0 30px rgba(202, 228, 225, 0.42), 0 0 12px rgba(191, 226, 255, 0.58), 0 0 22px rgba(191, 226, 255, 0.84), 0 0 38px rgba(191, 226, 255, 0.88), 0 0 60px #FFF;
+	}
 }
 
 .type-list {
